Toggler sizing and navbar brand now fixed on smaller sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,17 +336,17 @@ p {
     }
 
     .navbar-brand {
-        font-size: x-small;
+        font-size: x-large;
         text-align: center;
     }
 
     .navbar-toggler {
-        margin-left: 0;
-        font-size: x-small;
+        margin-left: 10px;
+        font-size: large;
     }
 
     .button {
-        padding-left: 0;
+        padding-left: 20px;
     }
 
     .hero-info {
@@ -380,5 +380,19 @@ p {
 
     .button {
         padding-left: 22%;
+    }
+
+    .navbar-brand {
+        font-size: x-small;
+        text-align: center;
+    }
+
+    .navbar-toggler {
+        margin-left: 20px;
+        font-size: x-small;
+    }
+
+    .button {
+        padding-left: 10px;
     }
 }
